--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,11 @@
 .externalNativeBuild
 .cxx
 local.properties
-executionHistory.bin
-executionHistory.lock
-fileHashes.bin
-fileHashes.lock
-resourceHashesCache.bin
-buildOutputCleanup.lock
-outputFiles.bin
-file-system.probe
+.gradle/8.0/executionHistory/executionHistory.bin
+.gradle/8.0/executionHistory/executionHistory.lock
+.gradle/8.0/fileHashes/fileHashes.bin
+.gradle/8.0/fileHashes/fileHashes.lock
+.gradle/8.0/fileHashes/resourceHashesCache.bin
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/buildOutputCleanup/outputFiles.bin
+.gradle/file-system.probe
