--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ local.properties
 .gradle/buildOutputCleanup/buildOutputCleanup.lock
 .gradle/buildOutputCleanup/outputFiles.bin
 .gradle/file-system.probe
+.gradle/8.0/checksums/checksums.lock
+.gradle/8.0/checksums/checksums.lock
+.gradle/8.0/fileHashes/fileHashes.bin
+.gradle/8.0/fileHashes/fileHashes.lock
