--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,4 @@ local.properties
 .gradle/buildOutputCleanup/outputFiles.bin
 .gradle/file-system.probe
 .gradle/8.0/checksums/checksums.lock
-.gradle/8.0/checksums/checksums.lock
-.gradle/8.0/fileHashes/fileHashes.bin
-.gradle/8.0/fileHashes/fileHashes.lock
+app/google-services.json
