--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation("io.coil-kt:coil:2.4.0")
+
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+    // Required only if Facebook login support is required
+    // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
+    implementation 'com.facebook.android:facebook-android-sdk:16.1.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
