--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        compose_ui_version = '1.4.0'
+    }
     repositories {
         google()
         mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.7.0")
-    }
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.2"
+        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath 'com.google.gms:google-services:4.3.15'
+     }
 }
 
 
 plugins {
-    id 'com.android.application' version '8.1.0' apply false
-    id 'com.android.library' version '8.1.0' apply false
+    id 'com.android.application' version '8.1.1' apply false
+    id 'com.android.library' version '8.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
 }
