--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
     implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
@@ -69,11 +72,30 @@ dependencies {
     implementation("io.coil-kt:coil:2.4.0")
     implementation 'com.google.firebase:firebase-auth:21.0.0' // Sostituisci con l'ultima versione disponibile
 
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
     implementation 'com.facebook.android:facebook-android-sdk:16.1.2'
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+
+    androidTestImplementation 'androidx.test:core:1.4.0'
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.4.0'
+
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+
+    androidTestImplementation 'org.mockito:mockito-android:3.12.4'
+
+    androidTestImplementation 'com.google.android.gms:play-services-auth:20.7.0'
+
+
+    // Espresso
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
